--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ body{
 
 .title{
     font-family: 'Bungee', cursive;
-    color:#e71c23;
+    color: #e71c23;
     text-align: center;
 }
 .tabContainer{
     width: 100%;
-    height: 560px;
+    height: 800px;
 }
 .buttonContainer{
     height: 15%;
@@ -33,13 +33,23 @@ button:hover{
     background-color: greenyellow;
 }
 .tabPanel{
+    /* display: flexbox; */
     height: 85%;
     background-color: gray;
     color: white;
     text-align: center;
-    padding-top: 105px;
+    padding-top: 0.1%;
     box-sizing: border-box;
     font-family: sans-serif;
     font-size: 22px;
     display: none;
+}
+.char-image-box{
+    width: 40%;
+    background-image: url(images/catph.jpg);
+    background-size: cover;
+    height: 70%;
+    margin-left: 5%;
+    margin-top: -3%;
+    border: 2px solid black;
 }
