--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ button:hover{
     flex-direction: row;
     align-items: center;
     width: 40%;
-    background-image: none;
+    background-image: url(images/catph.jpg);
     background-size: cover;
     height: 70%;
     margin-left: 5%;
