--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body{
     margin-left: 18%;
     margin-right: 18%;
     margin-top: 5%;
+    background-color: #f3d403;
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(225,37,23,1) 90%);
 }
 
 .title{
@@ -12,9 +14,12 @@ body{
 .tabContainer{
     width: 100%;
     height: 800px;
+
 }
 .buttonContainer{
     height: 15%;
+    position: relative;
+    
 }
 button{
     width: 25%;
@@ -29,7 +34,9 @@ button{
     background-color: gray;
 }
 button:hover{
-    background-color: greenyellow;
+    background-color: rgba(2,0,36,1);
+    color: yellow;
+    transition: 0.3s;
 }
 .tabPanel{
     position: relative;
@@ -42,6 +49,9 @@ button:hover{
     font-family: sans-serif;
     font-size: 22px;
     display: none;
+    -webkit-box-shadow: 24px 32px 10px 3px rgba(0,0,0,0.12);
+    -moz-box-shadow: 24px 32px 10px 3px rgba(0,0,0,0.12);
+    box-shadow: 24px 32px 10px 3px rgba(0,0,0,0.12);
 }
 .char-image-box{
     width: 40%;
@@ -62,6 +72,13 @@ button:hover{
     margin-top: -26%;
 }
 
+
+
+
+
+
+
+
 @media (max-width: 600px) {
     .body-small{
         margin-left: 0%;
@@ -76,6 +93,10 @@ button:hover{
     
 }
 
+
+
+
+
 .overlay {
     z-index: 99;
     position: absolute;
@@ -83,7 +104,7 @@ button:hover{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(250, 205, 205, 0.68);
 }
 
 .spinner {
@@ -98,7 +119,7 @@ button:hover{
   }
   
   .spinner .path {
-    stroke: green;
+    stroke: rgb(233, 202, 200);
     stroke-linecap: round;
     animation: dash 1.5s ease-in-out infinite;
   }
