--- a/style.css
+++ b/style.css
@@ -62,14 +62,28 @@ button:hover{
     margin-top: -3%;
     border: 2px solid black;
 }
+.char-image-box-xmen{
+    width: 40%;
+    background-image: url("images/xmenimage.jpeg");
+    background-size: cover;
+    height: 70%;
+    margin-left: 5%;
+    margin-top: -3%;
+    border: 2px solid black; 
+    background-position-y: 50%;
+}
 .character-name{
     padding-bottom: 3%;
+    font-family: 'Quantico', sans-serif;
+    font-size: 48px;
 }
 .character-bio{
     margin-left: 48%;
     width: 50%;
     position: absolute;
     margin-top: -26%;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 35px;
 }
 
 
