--- a/style.css
+++ b/style.css
@@ -7,15 +7,18 @@ body{
 }
 
 .title{
-    font-family: 'Bungee', cursive;
-    color: #e71c23;
+    font-family: 'Quantico', sans-serif;
+    color: #ffffff;
     text-align: center;
+    text-shadow: 12px 10px 8px rgba(0,0,0,0.85);
+    font-size: 58px;
 }
 .tabContainer{
     width: 100%;
     height: 800px;
 
 }
+
 .buttonContainer{
     height: 15%;
     position: relative;
@@ -29,8 +32,8 @@ button{
     outline: none;
     cursor: pointer;
     padding: 10px;
-    font-family: sans-serif;
-    font-size: 18px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 24px;
     background-color: gray;
 }
 button:hover{
@@ -49,9 +52,7 @@ button:hover{
     font-family: sans-serif;
     font-size: 22px;
     display: none;
-    -webkit-box-shadow: 24px 32px 10px 3px rgba(0,0,0,0.12);
-    -moz-box-shadow: 24px 32px 10px 3px rgba(0,0,0,0.12);
-    box-shadow: 24px 32px 10px 3px rgba(0,0,0,0.12);
+    box-shadow: 24px 32px 10px 3px rgba(0,0,0,0.45);
 }
 .char-image-box{
     width: 40%;
@@ -65,6 +66,26 @@ button:hover{
 .char-image-box-xmen{
     width: 40%;
     background-image: url("images/xmenimage.jpeg");
+    background-size: cover;
+    height: 70%;
+    margin-left: 5%;
+    margin-top: -3%;
+    border: 2px solid black; 
+    background-position-y: 50%;
+}
+.char-image-box-avengers{
+    width: 40%;
+    background-image: url("images/avengersimage.jpg");
+    background-size: cover;
+    height: 70%;
+    margin-left: 5%;
+    margin-top: -3%;
+    border: 2px solid black; 
+    background-position-y: 50%;
+}
+.char-image-box-gotg{
+    width: 40%;
+    background-image: url("images/gotgimage.jpg");
     background-size: cover;
     height: 70%;
     margin-left: 5%;
