added styling, prev next buttons

--- a/style.css
+++ b/style.css
@@ -108,6 +108,88 @@ button:hover{
 }
 
 
+.prev-next-buttons{
+    margin-left: 60%;
+    padding-bottom: 8%;
+}
+.next {
+    border-radius: 4px;
+    background-color: #ecf5f258;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-style: italic;
+    font-size: 28px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  .next span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .next span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .next:hover span {
+    padding-right: 25px;
+  }
+  
+  .next:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+  .prev {
+    border-radius: 4px;
+    background-color: #ecf5f258;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-style: italic;
+    font-size: 28px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  .prev span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .prev span:after {
+    content: '\00ab';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    left: -25px;
+    transition: 0.5s;
+  }
+  
+  .prev:hover span {
+    padding-left: 25px;
+  }
+  
+  .prev:hover span:after {
+    opacity: 1;
+    left: 0;
+  }
 
 
 
