--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
     margin-left: 18%;
     margin-right: 18%;
-    margin-top: 5%;
     background-color: #f3d403;
     background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(225,37,23,1) 90%);
 }
@@ -30,16 +29,16 @@ button{
     float: left;
     border: none;
     outline: none;
-    cursor: pointer;
     padding: 10px;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 24px;
-    background-color: gray;
+    
 }
 button:hover{
-    background-color: rgba(2,0,36,1);
-    color: yellow;
-    transition: 0.3s;
+    
+    box-shadow: inset 400px 0 0 0 rgba(142, 142, 142, 0.767);
+    color: white;
+    transition: 0.7s;
 }
 .tabPanel{
     position: relative;
@@ -98,6 +97,21 @@ button:hover{
     font-family: 'Quantico', sans-serif;
     font-size: 48px;
 }
+.xmen-name{
+    padding-bottom: 3%;
+    font-family: 'Quantico', sans-serif;
+    font-size: 48px;
+}
+.avengers-name{
+    padding-bottom: 3%;
+    font-family: 'Quantico', sans-serif;
+    font-size: 48px;
+}
+.gotg-name{
+    padding-bottom: 3%;
+    font-family: 'Quantico', sans-serif;
+    font-size: 48px;
+}
 .character-bio{
     margin-left: 48%;
     width: 50%;
@@ -106,8 +120,30 @@ button:hover{
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 35px;
 }
-
-
+.xmen-bio{
+    margin-left: 48%;
+    width: 50%;
+    position: absolute;
+    margin-top: -26%;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 35px;
+}
+.avengers-bio{
+    margin-left: 48%;
+    width: 50%;
+    position: absolute;
+    margin-top: -26%;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 35px;
+}
+.gotg-bio{
+    margin-left: 48%;
+    width: 50%;
+    position: absolute;
+    margin-top: -26%;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 35px;
+}
 .prev-next-buttons{
     margin-left: 60%;
     padding-bottom: 8%;
