have to fix bug with xmen prev next button, wolv bio never leaves

--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ button:hover{
   }
   
   .spinner .path {
-    stroke: rgb(233, 202, 200);
+    stroke: #fff;
     stroke-linecap: round;
     animation: dash 1.5s ease-in-out infinite;
   }
